contact html added

--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ForestGroup - the most beautiful park in your neighborhood!</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ForestGroup - the most beautiful park in your neighborhood!</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
@@ -12,9 +13,10 @@
 <script src="https://kit.fontawesome.com/a0210f9fff.js" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="/dist/css/main.min.css">
 </head>
+
 <body>
-    
-<nav class="navbar">
+
+  <nav class="navbar">
     <div class="container">
         <div class="navbar__nav">
             <div class="navbar__logo">
@@ -37,16 +39,59 @@
         </div>
     </div>
 </nav>
-<header class="header scrollpsy" id="header">
+  <header class="header scrollpsy" id="header">
     <div class="header__text">
         <p>Forest Group </p>
         <h1>The most beautiful park in your neighborhood!</h1>
     </div>
 </header>
-<h1>Offer</h1>
-<footer class="footer">
+  <section id="contact">
+
+
+    <div class="contact">
+
+      <div class="contact__logo">
+        <a href="#"><i class="fas fa-tree"></i>Forest</a>
+      </div>
+      
+      <div class="container"> 
+
+
+        <div class="contact__info">
+
+          <h3 class="contact__info-tittle">About us</h3>
+          <p class="contact__info-text">History</p>
+          <p class="contact__info-text">Parks</p>
+          <p class="contact__info-text">Reviews</p>
+        </div>
+
+
+        <div class="contact__info">
+
+          <h3 class="contact__info-tittle">Our company</h3>
+          <p class="contact__info-text">Job</p>
+          <p class="contact__info-text">Human Resources</p>
+          <p class="contact__info-text">Management</p>
+        </div>
+
+
+        <div class="contact__info">
+
+          <h3 class="contact__info-tittle">Documents</h3>
+          <p class="contact__info-text">Applications</p>
+          <p class="contact__info-text">Bookings</p>
+        </div>
+      </div>
+
+
+
+
+    </div>
+  </section>
+  <footer class="footer">
     <p class="footer__bottom-text"> &copy<span class="footer__year"></span> Forest Group Comapny Ltd.</p>
 </footer>
 
 </body>
+
 </html>
