footer changes-html structure

--- a/contact.html
+++ b/contact.html
@@ -47,60 +47,60 @@
 </header>
   <section id="contact" class="contact">
 
-    <div class="container">
-
-      <div class="contact__box">
-
-
-        <div class="contact__box-one">
-          <div class="contact__box-logo">
-            <a href="#"><i class="fas fa-tree"></i>Forest</a>
-          </div>
-        </div>
-
-
-
-
-
-        <div class="contact__box-two">
-          <div class="contact__box-info">
-            <h4 class="contact__box-info-tittle">About us</h4>
-
-            <div class="contact__box-content">
-              <p class="contact__box-content-text">History</p>
-              <p class="contact__box-content-text">Parks</p>
-              <p class="contact__box-content-text">Reviews</p>
-            </div>
-
-          </div>
-          <div class="contact__box-info">
-            <h4 class="contact__box-info-tittle">Our company</h4>
-
-            <div class="contact__box-content">
-              <p class="contact__box-content-text">Job</p>
-              <p class="contact__box-content-text">Human Resources</p>
-              <p class="contact__box-content-text">Management</p>
-            </div>
-
-          </div>
-          <div class="contact__box-info">
-            <h4 class="contact__box-info-tittle">Documents</h4>
-
-            <div class="contact__box-content">
-              <p class="contact__box-content-text">Applications</p>
-              <p class="contact__box-content-text">Bookings</p>
-            </div>
-
-          </div>
-
-
-        </div>
-      </div>
-    </div>
+    
 
   </section>
   <footer class="footer">
-    <p class="footer__bottom-text"> &copy<span class="footer__year"></span> Forest Group Comapny Ltd.</p>
+
+   <div class="container">
+
+
+    <div class="footer__boxes">
+        <div class="footer__box">
+            <h3 class="footer__box-title"> <i class="fas fa-tree"></i> Forest</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad aperiam nostrum enim neque magni eius modi vel officia adipisci sapiente.</p>
+            <div class="footer__box-social">
+                <a href="#" class="footer__box-link"><i class="fab fa-twitter-square"></i></a>
+                <a href="#" class="footer__box-link"><i class="fab fa-facebook-square"></i></a>
+                <a href="#" class="footer__box-link"><i class="fab fa-instagram"></i></a>
+            </div>
+        </div>
+
+        <div class="footer__box footer__box-desktop">
+            <h3 class="footer__box-title">About us</h3>
+            <ul class="footer__box-list">
+                <li class="footer__box-list-item"><a href="">History</a></li>
+                <li class="footer__box-list-item"><a href="">Parks</a></li>
+                <li class="footer__box-list-item"><a href="">Opinions</a></li>
+            </ul>
+
+        </div>
+        <div class="footer__box footer__box-desktop">
+            <h3 class="footer__box-title">Our company</h3>
+            <ul class="footer__box-list">
+                <li class="footer__box-list-item"><a href="">Carrer</a></li>
+                <li class="footer__box-list-item"><a href="">Human Resourses</a></li>
+                <li class="footer__box-list-item"><a href="">Managment</a></li>
+            </ul>
+
+        </div>
+        <div class="footer__box footer__box-desktop">
+            <h3 class="footer__box-title">Documents</h3>
+            <ul class="footer__box-list">
+                <li class="footer__box-list-item"><a href="">Applications</a></li>
+                <li class="footer__box-list-item"><a href="">Bookings</a></li>
+            </ul>
+
+        </div>
+
+    </div>
+
+
+
+   </div> 
+   <hr>
+   
+   <p class="footer__bottom-text"> &copy; <span class="footer__year"></span> ForestGroup Ltd.</p>
 </footer>
 
 </body>
