--- a/index.html
+++ b/index.html
@@ -78,7 +78,56 @@
 
 
     <footer class="footer">
-    <p class="footer__bottom-text"> &copy<span class="footer__year"></span> Forest Group Comapny Ltd.</p>
+
+   <div class="container">
+
+
+    <div class="footer__boxes">
+        <div class="footer__box">
+            <h3 class="footer__box-title"> <i class="fas fa-tree"></i> Forest</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad aperiam nostrum enim neque magni eius modi vel officia adipisci sapiente.</p>
+            <div class="footer__box-social">
+                <a href="#" class="footer__box-link"><i class="fab fa-twitter-square"></i></a>
+                <a href="#" class="footer__box-link"><i class="fab fa-facebook-square"></i></a>
+                <a href="#" class="footer__box-link"><i class="fab fa-instagram"></i></a>
+            </div>
+        </div>
+
+        <div class="footer__box footer__box-desktop">
+            <h3 class="footer__box-title">About us</h3>
+            <ul class="footer__box-list">
+                <li class="footer__box-list-item"><a href="">History</a></li>
+                <li class="footer__box-list-item"><a href="">Parks</a></li>
+                <li class="footer__box-list-item"><a href="">Opinions</a></li>
+            </ul>
+
+        </div>
+        <div class="footer__box footer__box-desktop">
+            <h3 class="footer__box-title">Our company</h3>
+            <ul class="footer__box-list">
+                <li class="footer__box-list-item"><a href="">Carrer</a></li>
+                <li class="footer__box-list-item"><a href="">Human Resourses</a></li>
+                <li class="footer__box-list-item"><a href="">Managment</a></li>
+            </ul>
+
+        </div>
+        <div class="footer__box footer__box-desktop">
+            <h3 class="footer__box-title">Documents</h3>
+            <ul class="footer__box-list">
+                <li class="footer__box-list-item"><a href="">Applications</a></li>
+                <li class="footer__box-list-item"><a href="">Bookings</a></li>
+            </ul>
+
+        </div>
+
+    </div>
+
+
+
+   </div> 
+   <hr>
+   
+   <p class="footer__bottom-text"> &copy; <span class="footer__year"></span> ForestGroup Ltd.</p>
 </footer>
 
     <script src="../dist/js/main.min.js"></script>
