style css to footer

--- a/offer.html
+++ b/offer.html
@@ -132,9 +132,10 @@
 
 
     <div class="footer__boxes">
-        <div class="footer__box">
-            <h3 class="footer__box-title"> <i class="fas fa-tree"></i> Forest</h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad aperiam nostrum enim neque magni eius modi vel officia adipisci sapiente.</p>
+        <div class="footer__box footer__box-social">
+            <h3 class="footer__box-title footer__box-title-logo"> <i class="fas fa-tree"></i> Forest</h3>
+            <p class="footer__box-text">Join us on:</p>
+
             <div class="footer__box-social">
                 <a href="#" class="footer__box-link"><i class="fab fa-twitter-square"></i></a>
                 <a href="#" class="footer__box-link"><i class="fab fa-facebook-square"></i></a>
@@ -154,7 +155,7 @@
         <div class="footer__box footer__box-desktop">
             <h3 class="footer__box-title">Our company</h3>
             <ul class="footer__box-list">
-                <li class="footer__box-list-item"><a href="">Carrer</a></li>
+                <li class="footer__box-list-item"><a href="">Carreer</a></li>
                 <li class="footer__box-list-item"><a href="">Human Resourses</a></li>
                 <li class="footer__box-list-item"><a href="">Managment</a></li>
             </ul>
