--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,8 @@
 
 <body>
 
-  <nav class="navbar">
+  
+<nav class="navbar">
     <div class="container">
         <div class="navbar__nav">
             <div class="navbar__logo">
@@ -25,8 +26,8 @@
 
             <ul class="navbar__list">
                 <li class="navbar__item"><a href="index.html">Home</a></li>
-                <li class="navbar__item"><a href="#aboutus">About us</a></li>
-                <li class="navbar__item"><a href="#offers">Offer</a></li>
+                <li class="navbar__item"><a href="index.html#aboutus">About us</a></li>
+                <li class="navbar__item"><a href="index.html#offers">Offer</a></li>
                 <li class="navbar__item"><a href="contact.html">Contact</a></li>
             </ul>
 
@@ -77,6 +78,7 @@
 
         <div class="contact__box-info">
           <form action="">
+
             <input type="text" placeholder="Enter your name" required>
             <input type="email" placeholder="Type your e-mail address" required>
             <input type="text" placeholder="Subject" required>
@@ -155,7 +157,7 @@
    
    <p class="footer__bottom-text"> &copy; <span class="footer__year"></span> ForestGroup Ltd.</p>
 </footer>
-
+  <script src="../dist/js/main.min.js"></script>
 </body>
 
 </html>
