--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 
 <body>
 
-    <nav class="navbar">
+    
+<nav class="navbar">
     <div class="container">
         <div class="navbar__nav">
             <div class="navbar__logo">
@@ -26,8 +27,8 @@
 
             <ul class="navbar__list">
                 <li class="navbar__item"><a href="index.html">Home</a></li>
-                <li class="navbar__item"><a href="#aboutus">About us</a></li>
-                <li class="navbar__item"><a href="#offers">Offer</a></li>
+                <li class="navbar__item"><a href="index.html#aboutus">About us</a></li>
+                <li class="navbar__item"><a href="index.html#offers">Offer</a></li>
                 <li class="navbar__item"><a href="contact.html">Contact</a></li>
             </ul>
 
