--- a/offer.html
+++ b/offer.html
@@ -16,7 +16,8 @@
 
 <body>
 
-    <nav class="navbar">
+   
+<nav class="navbar">
     <div class="container">
         <div class="navbar__nav">
             <div class="navbar__logo">
@@ -25,8 +26,8 @@
 
             <ul class="navbar__list">
                 <li class="navbar__item"><a href="index.html">Home</a></li>
-                <li class="navbar__item"><a href="#aboutus">About us</a></li>
-                <li class="navbar__item"><a href="#offers">Offer</a></li>
+                <li class="navbar__item"><a href="index.html#aboutus">About us</a></li>
+                <li class="navbar__item"><a href="index.html#offers">Offer</a></li>
                 <li class="navbar__item"><a href="contact.html">Contact</a></li>
             </ul>
 
@@ -39,6 +40,8 @@
         </div>
     </div>
 </nav>
+
+
     <header class="header scrollpsy" id="header">
         <div class="header__text">
             
@@ -54,7 +57,7 @@
 
             <div class="services__box">
                 <div class="services__box-service">
-                    <i class="fab fa-canadian-maple-leaf"></i>
+                    <i class="fa fa-leaf-maple"></i>
                     <h3>Lorem ipsum dolor sit amet.</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur necessitatibus excepturi temporibus nesciunt molestiae magni doloribus ipsam sit alias tenetur.</p>
                    
@@ -70,7 +73,7 @@
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur necessitatibus excepturi temporibus nesciunt molestiae magni doloribus ipsam sit alias tenetur.</p>
                 </div>
                 <div class="services__box-service">
-                    <i class="fab fa-envira"></i>
+                    <i class="fas fa-leaf-oak"></i>
                     <h3>Lorem ipsum dolor sit amet.</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur necessitatibus excepturi temporibus nesciunt molestiae magni doloribus ipsam sit alias tenetur.</p>
                 </div>
@@ -132,7 +135,7 @@
    
    <p class="footer__bottom-text"> &copy; <span class="footer__year"></span> ForestGroup Ltd.</p>
 </footer>
-
+    <script src="../dist/js/main.min.js"></script>
 </body>
 
 </html>
