--- a/offer.html
+++ b/offer.html
@@ -57,7 +57,7 @@
 
             <div class="services__box">
                 <div class="services__box-service">
-                    <i class="fa fa-leaf-maple"></i>
+                    <i class="fab fa-canadian-maple-leaf"></i>
                     <h3>Lorem ipsum dolor sit amet.</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur necessitatibus excepturi temporibus nesciunt molestiae magni doloribus ipsam sit alias tenetur.</p>
                    
@@ -73,7 +73,7 @@
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur necessitatibus excepturi temporibus nesciunt molestiae magni doloribus ipsam sit alias tenetur.</p>
                 </div>
                 <div class="services__box-service">
-                    <i class="fas fa-leaf-oak"></i>
+                    <i class="fab fa-envira"></i>
                     <h3>Lorem ipsum dolor sit amet.</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur necessitatibus excepturi temporibus nesciunt molestiae magni doloribus ipsam sit alias tenetur.</p>
                 </div>
