header servives styles added

--- a/offer.html
+++ b/offer.html
@@ -43,9 +43,9 @@
 
 
     <header class="header scrollpsy" id="header">
-        <div class="header__text">
+        <div class="header__text header__text-services">
             
-           <h2>our exclusive offer only for companies</h2>
+           <h2>Our exclusive offer only for companies!</h2>
         </div>
     </header>
 
@@ -57,7 +57,7 @@
 
             <div class="services__box">
                 <div class="services__box-service">
-                    <i class="fab fa-canadian-maple-leaf"></i>
+                    <i class="fa fa-leaf-maple"></i>
                     <h3>Lorem ipsum dolor sit amet.</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur necessitatibus excepturi temporibus nesciunt molestiae magni doloribus ipsam sit alias tenetur.</p>
                    
@@ -73,7 +73,7 @@
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur necessitatibus excepturi temporibus nesciunt molestiae magni doloribus ipsam sit alias tenetur.</p>
                 </div>
                 <div class="services__box-service">
-                    <i class="fab fa-envira"></i>
+                    <i class="fas fa-leaf-oak"></i>
                     <h3>Lorem ipsum dolor sit amet.</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur necessitatibus excepturi temporibus nesciunt molestiae magni doloribus ipsam sit alias tenetur.</p>
                 </div>
