--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
             </div>
 
             <ul class="navbar__list">
-                <li class="navbar__item"><a href="index.html">Home</a></li>
+                <li class="navbar__item"><a href="index.html#">Home</a></li>
                 <li class="navbar__item"><a href="index.html#aboutus">About us</a></li>
                 <li class="navbar__item"><a href="index.html#offers">Offer</a></li>
-                <li class="navbar__item"><a href="contact.html">Contact</a></li>
+                <li class="navbar__item"><a href="contact.html#contact">Contact</a></li>
             </ul>
 
 
@@ -41,7 +41,7 @@
         </div>
     </div>
 </nav>
-    <header class="header scrollpsy" id="header">
+    <header class="header" id="header">
     <div class="header__text">
         <p>Forest Group </p>
         <h1>The most beautiful park in your neighborhood!</h1>
