--- a/offer.html
+++ b/offer.html
@@ -25,10 +25,10 @@
             </div>
 
             <ul class="navbar__list">
-                <li class="navbar__item"><a href="index.html">Home</a></li>
+                <li class="navbar__item"><a href="index.html#">Home</a></li>
                 <li class="navbar__item"><a href="index.html#aboutus">About us</a></li>
                 <li class="navbar__item"><a href="index.html#offers">Offer</a></li>
-                <li class="navbar__item"><a href="contact.html">Contact</a></li>
+                <li class="navbar__item"><a href="contact.html#contact">Contact</a></li>
             </ul>
 
 
@@ -57,7 +57,7 @@
 
             <div class="services__box">
                 <div class="services__box-service">
-                    <i class="fab fa-canadian-maple-leaf"></i>
+                    <i class="fa fa-leaf-maple"></i>
                     <h3>Lorem ipsum dolor sit amet.</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur necessitatibus excepturi temporibus nesciunt molestiae magni doloribus ipsam sit alias tenetur.</p>
                    
@@ -73,7 +73,7 @@
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur necessitatibus excepturi temporibus nesciunt molestiae magni doloribus ipsam sit alias tenetur.</p>
                 </div>
                 <div class="services__box-service">
-                    <i class="fab fa-envira"></i>
+                    <i class="fas fa-leaf-oak"></i>
                     <h3>Lorem ipsum dolor sit amet.</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur necessitatibus excepturi temporibus nesciunt molestiae magni doloribus ipsam sit alias tenetur.</p>
                 </div>
