--- a/contact.html
+++ b/contact.html
@@ -25,10 +25,10 @@
             </div>
 
             <ul class="navbar__list">
-                <li class="navbar__item"><a href="index.html">Home</a></li>
+                <li class="navbar__item"><a href="index.html#">Home</a></li>
                 <li class="navbar__item"><a href="index.html#aboutus">About us</a></li>
                 <li class="navbar__item"><a href="index.html#offers">Offer</a></li>
-                <li class="navbar__item"><a href="contact.html">Contact</a></li>
+                <li class="navbar__item"><a href="contact.html#contact">Contact</a></li>
             </ul>
 
 
@@ -40,7 +40,7 @@
         </div>
     </div>
 </nav>
-  <header class="header scrollpsy" id="header">
+  <header class="header" id="header">
     <div class="header__text">
         <p>Forest Group </p>
         <h1>The most beautiful park in your neighborhood!</h1>
